--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       <div class="form">
         <p class="title">BOOK YOUR FLIGHT
           <br/>WITH THE PILATUS PC-12M</p>
-        <input type="text" class="form-control" id="exampleInputName2" placeholder="Pick From">
-        <input type="text" class="form-control" id="exampleInputName2" placeholder="Drop To">
+        <input type="text" class="rinput" id="exampleInputName2" placeholder="Pick From">
+        <input type="text" class="rinput" id="exampleInputName2" placeholder="Drop To">
         <button type="button" class="btn btn-warning">GET A QUOTE</button>
       </div>
       <div class="outform">
