--- a/index.html
+++ b/index.html
@@ -17,62 +17,44 @@
     <source src="src/movie.mp4" type="video/mp4">
   </video>
   <div class="container">
-    <img id="logo" src="src/logo.png" alt="Smiley face" height="150px" width="25%">
-    <div class="rdiv">
-      <div class="form">
-        <p class="title">BOOK YOUR FLIGHT
-          <br/>WITH THE PILATUS PC-12M</p>
-        <input type="text" class="rinput" id="exampleInputName2" placeholder="Pick From">
-        <input type="text" class="rinput" id="exampleInputName2" placeholder="Drop To">
-        <button type="button" class="btn btn-warning">GET A QUOTE</button>
-      </div>
-      <div class="outform">
-        <button type="button" class="btn btn-warning">REQUEST INFORMATION</button>
+    <div class="row">
+      <div class="col-xs-12 col-sm-6 col-md-4">
+        <img id="logo" src="src/logo.png" alt="Smiley face" height="150px" width="100%">
       </div>
     </div>
-    <div class="footerwraper">
-      <div class="footer">
-        <div class="row">
-          <div class="col-xs-2">
-            <p class="our">Our Media<i class="fa fa-arrow-right" aria-hidden="true"></i></p>
-          </div>
-          <div class="col-xs-2">
-            <img src="src/1.png">
-          </div>
-          <div class="col-xs-2">
-            <img src="src/2.png">
-          </div>
-          <div class="col-xs-2">
-            <img src="src/3.png">
-          </div>
-          <div class="col-xs-2">
-            <img src="src/4.png">
-          </div>
-          <div class="col-xs-2">
-            <img src="src/5.png">
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-xs-2">
-            <p class="our">Our Clients<i class="fa fa-arrow-right" aria-hidden="true"></i></p>
-          </div>
-          <div class="col-xs-2">
-            <img src="src/6.png">
-          </div>
-          <div class="col-xs-2">
-            <img src="src/7.png">
-          </div>
-          <div class="col-xs-2">
-            <img src="src/8.png">
-          </div>
-          <div class="col-xs-2">
-            <img src="src/9.png">
-          </div>
-          <div class="col-xs-2">
-            <img src="src/10.png">
-          </div>
+    <div class="row">
+      <div class="rdiv col-xs-12 col-sm-6 col-sm-offset-6 col-md-3 col-md-offset-7">
+        <div class="form">
+          <p class="title">BOOK YOUR FLIGHT
+            <br/>WITH THE PILATUS PC-12M</p>
+          <input type="text" class="rinput" id="exampleInputName2" placeholder="Pick From">
+          <input type="text" class="rinput" id="exampleInputName2" placeholder="Drop To">
+          <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#myModal">Custom Charter Quote</button>
+          <button type="button" class="btn btn-warning">Block Hour / Ownership Inquiry</button>
         </div>
       </div>
+    </div>
+    <div class="row">
+      <!-- Button trigger modal -->
+
+          <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                  <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+                </div>
+                <div class="modal-body">
+                  ...
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                  <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
+              </div>
+            </div>
+          </div>
+      <!-- Modal -->
     </div>
   </div>
   <div class="first" style="width: 100%; height: 100%; background: rgba(255,0,0,0.5);"></div>
