--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 
 <body>
   <video id="bgvid" playsinline autoplay muted loop>
-    <!-- WCAG general accessibility recommendation is that media such as background video play through only once. Loop turned on for the purposes of illustration; if removed, the end of the video will fade in the same way created by pressing the "Pause" button  -->
     <source src="src/movie.mp4" type="video/mp4">
   </video>
   <div class="container">
@@ -36,29 +35,41 @@
     </div>
     <div class="row">
       <!-- Button trigger modal -->
-
-          <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-            <div class="modal-dialog" role="document">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                  <h4 class="modal-title" id="myModalLabel">Modal title</h4>
-                </div>
-                <div class="modal-body">
-                  ...
-                </div>
-                <div class="modal-footer">
-                  <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                  <button type="button" class="btn btn-primary">Save changes</button>
-                </div>
-              </div>
+      <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+              <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+            </div>
+            <div class="modal-body">
+              ...
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-primary">Save changes</button>
             </div>
           </div>
+        </div>
+      </div>
       <!-- Modal -->
     </div>
   </div>
-  <div class="first" style="width: 100%; height: 100%; background: rgba(255,0,0,0.5);"></div>
-  <div class="first" style="width: 100%; height: 100%; background: rgba(0,255,0,0.5);"></div>
+  <div class="first" style="width: 100%; height: 100%; background: rgba(0,0,0,0.3);">
+    <video width="100%" height="100%" playsinline autoplay muted loop>
+      <source src="src/first.mp4" type="video/mp4">
+    </video>
+  </div>
+  <div class="first" style="width: 100%; height: 100%; background: rgba(0,0,0,0.3);">
+    <video width="100%" height="100%" playsinline autoplay muted loop>
+      <source src="src/second.mp4" type="video/mp4">
+    </video>
+  </div>
+  <div class="first" style="width: 100%; height: 100%; background: rgba(0,0,0,0.3);">
+    <video width="100%" height="100%" playsinline autoplay muted loop>
+      <source src="src/third.mp4" type="video/mp4">
+    </video>
+  </div>
   <div id="polina">
     <h1>Polina</h1>
     <p>filmed by Alexander Wagner 2011
