--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <video id="bgvid" playsinline autoplay muted loop>
-    <source src="src/movie.mp4" type="video/mp4">
+    <source src="src/total.mp4" type="video/mp4">
   </video>
   <div class="container">
     <div class="row">
