--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <div class="item">
         <img src="src/dropbox/G-a.jpg" width="80%" height="100%" alt="...">
         <div class="carousel-caption">
-          Hawker 800
+          Gulfstream IV
         </div>
       </div>
     </div>
