--- a/index.html
+++ b/index.html
@@ -18,16 +18,14 @@
     <source src="src/total.mp4" type="video/mp4">
   </video>
   <div class="container">
-    <div class="row">
+    <div class="row logo">
       <div class="col-xs-12 col-sm-6 col-md-4">
-        <img id="logo" src="src/logo.png" alt="Smiley face" height="150px" />
+        <img id="logo" src="src/logo.png" alt="Smiley face" height="80px" />
       </div>
     </div>
     <div class="row">
       <div class="rdiv col-xs-12 col-sm-6 col-sm-offset-6 col-md-5 col-md-offset-7 col-md-4 col-md-offset-7">
         <div class="form">
-          <input type="text" class="rinput" id="exampleInputName2" placeholder="Pick From">
-          <input type="text" class="rinput" id="exampleInputName2" placeholder="Drop To">
           <button type="button" class="btn btn-info" data-toggle="modal" data-target="#myModal">Custom Charter Quote</button>
           <button type="button" class="btn btn-info">Block Hour / Ownership Inquiry</button>
         </div>
@@ -53,6 +51,36 @@
       </div>
     </div>
   </div>
+  <div class="kinds row">
+    <div class="col-xs-12 col-sm-4">
+      <h2>Falcon 50</h2>
+      <hr/>
+      <img src="src/dropbox/F-b.jpg" width="70%" height="70%" />
+      <hr/>
+      <p>
+        The Dassault Falcon 50 is a French-built super mid-sized, long-range corporate jet, featuring a three jet engine layout with an S-duct central engine. It has the same fuselage cross-section and similar capacity as the earlier Falcon 20 twinjet but is a completely new design that is area ruled and includes a more advanced wing design.
+      </p>
+    </div>
+    <div class="col-xs-12 col-sm-4">
+      <h2>Hawker 800</h2>
+      <hr/>
+      <img src="src/dropbox/H-b.jpg" width="70%" height="70%" />
+      <hr/>
+      <p>
+        The Hawker 800 is a mid-size twin-engine corporate aircraft. It is a development of the British Aerospace BAe 125, and was assembled by Hawker Beechcraft.
+        <br/> In April 1981, the British Aerospace Board sanctioned the programme to improve the British Aerospace 125-700 series. By May 1983 the new aircraft was ready for its first test flight.
+      </p>
+    </div>
+    <div class="col-xs-12 col-sm-4">
+      <h2>Gulfstream IV</h2>
+      <hr/>
+      <img src="src/dropbox/G-b.jpg" width="70%" height="70%" />
+      <hr/>
+      <p>
+        The Gulfstream V (Model GV, pronounced Gee-5) is a long-range, large business jet aircraft produced by Gulfstream Aerospace, derived from the previous Gulfstream IV. It flies up to Mach 0.90, up to 51,000 feet (16,000 m) and has a 6,500 nautical miles (12,000 km) range. It typically accommodates four crew and 14 passengers. It first flew on November 28, 1995, and entered service in June 1997.
+      </p>
+    </div>
+  </div>
   <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
       <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
@@ -61,19 +89,19 @@
     </ol>
     <div class="carousel-inner" role="listbox">
       <div class="item active">
-        <img src="src/dropbox/F-a.jpg" width="80%" height="100%" alt="...">
+        <img src="src/dropbox/F-a.jpg" width="70%" height="100%" alt="...">
         <div class="carousel-caption">
           Falcon 50
         </div>
       </div>
       <div class="item">
-        <img src="src/dropbox/H-a.jpg" width="80%" height="100%" alt="...">
+        <img src="src/dropbox/H-a.jpg" width="70%" height="100%" alt="...">
         <div class="carousel-caption">
           Hawker 800
         </div>
       </div>
       <div class="item">
-        <img src="src/dropbox/G-a.jpg" width="80%" height="100%" alt="...">
+        <img src="src/dropbox/G-a.jpg" width="70%" height="100%" alt="...">
         <div class="carousel-caption">
           Gulfstream IV
         </div>
@@ -88,55 +116,87 @@
       <span class="sr-only">Next</span>
     </a>
   </div>
-  <div class="kinds row">
-    <div class="col-xs-12 col-sm-4">
-      <h2>Falcon 50</h2>
-      <hr/>
-      <img src="src/dropbox/F-b.jpg" width="100px" height="100px" />
-      <hr/>
-      <p>
-        The Dassault Falcon 50 is a French-built super mid-sized, long-range corporate jet, featuring a three jet engine layout with an S-duct central engine. It has the same fuselage cross-section and similar capacity as the earlier Falcon 20 twinjet but is a completely new design that is area ruled and includes a more advanced wing design.
-      </p>
+
+  <div class="oneslide" style="width: 100%; background: rgba(20,50,110,1);">
+    <div class="row">
+      <h1 style="padding-top: 40px;">Falcon 50</h1>
     </div>
-    <div class="col-xs-12 col-sm-4">
-      <h2>Hawker 800</h2>
-      <hr/>
-      <img src="src/dropbox/H-b.jpg" width="100px" height="100px" />
-      <hr/>
-      <p>
-        The Hawker 800 is a mid-size twin-engine corporate aircraft. It is a development of the British Aerospace BAe 125, and was assembled by Hawker Beechcraft.
-        <br/> In April 1981, the British Aerospace Board sanctioned the programme to improve the British Aerospace 125-700 series. By May 1983 the new aircraft was ready for its first test flight.
-      </p>
-    </div>
-    <div class="col-xs-12 col-sm-4">
-      <h2>Gulfstream IV</h2>
-      <hr/>
-      <img src="src/dropbox/G-b.jpg" width="100px" height="100px" />
-      <hr/>
-      <p>
-        The Gulfstream V (Model GV, pronounced Gee-5) is a long-range, large business jet aircraft produced by Gulfstream Aerospace, derived from the previous Gulfstream IV. It flies up to Mach 0.90, up to 51,000 feet (16,000 m) and has a 6,500 nautical miles (12,000 km) range. It typically accommodates four crew and 14 passengers. It first flew on November 28, 1995, and entered service in June 1997.
-      </p>
+    <div class="row" style="padding: 5%">
+      <div style="position: relative;">
+        <video width="100%" height="100%" playsinline autoplay muted loop>
+          <source src="src/first.mp4" type="video/mp4">
+        </video>
+        <div style="position: absolute;top:0px;left:5%;text-align: left;">
+          <h2>Falcon 50</h2>
+          <p>Nine Seat Supermid Jet</p>
+          <p>Coast to Coast Range</p>
+          <p>Finished Product Cost: $1.35M - $ 2.5M</p>
+          <p>Nationwide One-Way Charter Program</p>
+        </div>
+        <div style="position: absolute;top:0px; right :0%; width: 30%; margin-top: 5%;">
+          <img style="width: 20%;" src="src/img/download.png" alt="wifi"/><br/>
+          <img style="width: 20%;" src="src/img/cert.png" alt="wifi"/>
+        </div>
+        <div style="position: absolute;bottom: 10%; left: 50%; transform: translateX(-50%); width: 50%;">
+          <img style="width: 100%;" src="src/img/F-c.png" alt="wifi"/><br/>
+        </div>
+      </div>
     </div>
   </div>
-  <div class="oneslide" style="width: 100%; height: 100%; background: rgba(0,0,0,0.4);">
-    <h1>Falcon 50</h1>
-    <video width="100%" height="100%" playsinline autoplay muted loop>
-      <source src="src/first.mp4" type="video/mp4">
-    </video>
+  <div class="oneslide" style="width: 100%; background: rgba(200,200,200,1);">
+    <div class="row">
+      <h1 style="padding-top: 40px;">Hawker 800</h1>
+    </div>
+    <div class="row" style="padding: 5%">
+      <div style="position: relative;">
+        <video width="100%" height="100%" playsinline autoplay muted loop>
+          <source src="src/second.mp4" type="video/mp4">
+        </video>
+        <div style="position: absolute;top:0px;left:5%;text-align: left;">
+          <h2>Hawker 800</h2>
+          <p>Eight Seat Midsize Jet</p>
+          <p>4:30 Range</p>
+          <p>Finished Product Cost: $1.0M - $1.65M</p>
+          <p>Nationwide One-Way Charter Program</p>
+        </div>
+        <div style="position: absolute;top:0px; right :0%; width: 30%; margin-top: 5%;">
+          <img style="width: 20%;" src="src/img/download.png" alt="wifi"/><br/>
+          <img style="width: 20%;" src="src/img/cert.png" alt="wifi"/>
+        </div>
+        <div style="position: absolute;bottom: 10%; left: 50%; transform: translateX(-50%); width: 50%;">
+          <img style="width: 100%;" src="src/img/H-c.png" alt="wifi"/><br/>
+        </div>
+      </div>
+    </div>
   </div>
-  <div class="oneslide" style="width: 100%; height: 100%; background: rgba(0,0,0,0.4);">
-    <h1>Hawker 800</h1>
-    <video width="100%" height="100%" playsinline autoplay muted loop>
-      <source src="src/second.mp4" type="video/mp4">
-    </video>
+  <div class="oneslide" style="width: 100%; background: rgba(88,88,200,1);">
+    <div class="row">
+      <h1 style="padding-top: 40px;">Gulfstream IV</h1>
+    </div>
+    <div class="row" style="padding: 5%">
+      <div style="position: relative;">
+        <video width="100%" height="100%" playsinline autoplay muted loop>
+          <source src="src/third.mp4" type="video/mp4">
+        </video>
+        <div style="position: absolute;top:0px;left:5%;text-align: left;">
+          <h2>Gulfstream IV</h2>
+          <p>14 Seat Heavy Jet</p>
+          <p>Intercontinental Range</p>
+          <p>Finished Product Cost: $3.85M - $ 6.5M</p>
+          <p>Nationwide One-Way Charter Program</p>
+        </div>
+        <div style="position: absolute;top:0px; right :0%; width: 30%; margin-top: 5%;">
+          <img style="width: 20%;" src="src/img/download.png" alt="wifi"/><br/>
+          <img style="width: 20%;" src="src/img/cert.png" alt="wifi"/>
+        </div>
+        <div style="position: absolute;bottom: 10%; left: 50%; transform: translateX(-50%); width: 50%;">
+          <img style="width: 100%;" src="src/img/G-c.png" alt="wifi"/><br/>
+        </div>
+      </div>
+    </div>
   </div>
-  <div class="oneslide" style="width: 100%; height: 100%; background: rgba(0,0,0,0.4);">
-    <h1>Gulfstream IV</h1>
-    <video width="100%" height="100%" playsinline autoplay muted loop>
-      <source src="src/third.mp4" type="video/mp4">
-    </video>
-  </div>
-  <div class="articles">
+
+  <div class="articles row">
     <div id="polina">
       <h1>Polina</h1>
       <p>filmed by Alexander Wagner 2011
@@ -170,9 +230,117 @@
           <button>Pause</button>
     </div>
   </div>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  <script src="https://www.atlasestateagents.co.uk/javascript/tether.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <div class="myfooter row">
+    <div class="col-md-6 hidden-xs">
+      <div class="row">
+        <div class="col-sm-4 footer-menu col-sm-offset-1 col-md-offset-0">
+          <p>
+            <a href="/products">Products</a> </p>
+          <p>
+            <a href="/services/automation">Services</a> </p>
+          <p>
+            <a href="/industries">Industries</a> </p>
+          <p>
+            <a href="/customers">Customers</a> </p>
+          <p>
+            <a href="/partners">Partners</a> </p>
+          <p>
+            <a href="/insights">Insight</a> </p>
+          <p>
+            <a href="https://www.bpmonline.com/company/about">About</a> </p>
+        </div>
+        <div class="col-sm-6 col-sm-offset-1 col-md-offset-2 footer-xs-col footer-popular">
+          <span class="footer-title">Popular</span>
+          <p>
+            <a href="/products">CRM bundle</a>
+          </p>
+          <p>
+            <a href="/partners/apply">Partner Guide</a>
+          </p>
+          <p>
+            <a href="/company/press">News and webinars</a>
+          </p>
+          <p>
+            <a href="/blog">Blog</a>
+          </p>
+          <p>
+            <a href="/trial/bpmonline">Free 14-day trial</a>
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div class="row">
+        <div class="col-sm-4 col-md-5 col-lg-4 col-sm-offset-1 col-md-offset-0 hidden-xs footer-academy">
+          <span class="footer-title">Academy</span>
+          <p>
+            <a href="http://academy.bpmonline.com">Video tutorials</a>
+          </p>
+          <p>
+            <a href="http://academy.bpmonline.com">Documentation</a>
+          </p>
+          <p>
+            <a href="http://academy.bpmonline.com/trainings/">Trainings</a>
+          </p>
+          <p>
+            <a href="http://academy.bpmonline.com/test/">Testing and certification</a>
+          </p>
+        </div>
+        <div class="col-sm-6 col-md-7 col-lg-6 col-sm-offset-1 col-md-offset-0 col-lg-offset-2 last-col footer-xs-col footer-mobile">
+          <span class="footer-title">Connect with us</span>
+          <div class="separator">&nbsp;</div>
+          <div class="phone">
+            <span class="phone_ico"></span><span>USA: </span><a href="tel:>+1&nbsp;617&nbsp;765&nbsp;7997">+1&nbsp;617&nbsp;765&nbsp;7997</a>
+            <br>
+            <div style="margin-top: 10px;">
+              <span class="phone_ico"></span><span>UK: </span><a href="tel:>+44&nbsp;20&nbsp;3384&nbsp;0040">+44&nbsp;20&nbsp;3384&nbsp;0040</a>
+            </div>
+            <div style="margin-top: 10px;">
+              <span class="phone_ico"></span><span>Australia: </span> <a href="tel:>+61&nbsp;261&nbsp;452&nbsp;888">+61&nbsp;261&nbsp;452&nbsp;888</a>
+            </div>
+            <div style="margin-top: 10px;">
+              <span class="phone_ico"></span><span>Singapore: </span> <a href="tel:>+65&nbsp;9060&nbsp;0275 ">+65&nbsp;9060&nbsp;0275 </a>
+            </div>
+            <div style="margin-top: 10px;">
+              <span class="envelope_ico"></span> <a href="mailto:info@bpmonline.com">info@bpmonline.com</a>
+            </div>
+            <div style="margin-top: 10px;">
+              <span class="envelope_ico"></span> <a href="mailto:support.team@bpmonline.com">support.team@bpmonline.com</a>
+            </div>
+          </div>
+          <div class="clearfix"></div>
+          <div class="footer-social">
+            <a title="Bpm'online on LinkedIn" rel="nofollow" href="https://www.linkedin.com/company/bpmonline" target="_blank">
+              <img alt="Find us on LinkedIn" src="/sites/all/themes/ts_bootstrap_subtheme/img/social/linkedin.png" />
+            </a>
+            <a title="Bpm'online on Facebook" rel="nofollow" href="https://www.facebook.com/bpmonline" target="_blank">
+              <img alt="Find us on Facebook" src="/sites/all/themes/ts_bootstrap_subtheme/img/social/facebook.png" />
+            </a>
+            <a title="Bpm'online on Google+" rel="nofollow" href="https://plus.google.com/u/0/+Bpmonline_plus/posts" target="_blank">
+              <img alt="Find us on Google+" src="/sites/all/themes/ts_bootstrap_subtheme/img/social/google.png" />
+            </a>
+            <a title="Bpm'online on Youtube" rel="nofollow" href="https://www.youtube.com/user/bpmonlinevideo" target="_blank">
+              <img alt="Find us on Youtube" src="/sites/all/themes/ts_bootstrap_subtheme/img/social/youtube.png" />
+            </a>
+            <a title="Bpm'online on Twitter" rel="nofollow" href="https://twitter.com/bpmonline" target="_blank">
+              <img alt="Find us on Twitter" src="/sites/all/themes/ts_bootstrap_subtheme/img/social/twitter.png" />
+            </a>
+            <a title="Bpm'online on Slideshare" rel="nofollow" href="http://www.slideshare.net/BPMonline" target="_blank">
+              <img alt="Find us on Slideshare" src="/sites/all/themes/ts_bootstrap_subtheme/img/social/slideshare.png" />
+            </a>
+          </div>
+          <div class="clearfix"></div>
+          <p class="year-info">
+            <div class="trademark-container"> © 2016 <a href="/crm-software">bpm&#039;online</a>. All rights reserved.</div>
+            <a href="/sitemap"><img alt="Sitemap" src="/sites/all/themes/ts_bootstrap_subtheme/img/icons/sitemap.gif" width="11" height="9"></a> <a href="/sitemap">Site Map</a>
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script src="https://www.atlasestateagents.co.uk/javascript/tether.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 </html>
