--- a/index.html
+++ b/index.html
@@ -116,86 +116,84 @@
       <span class="sr-only">Next</span>
     </a>
   </div>
-
   <div class="oneslide" style="width: 100%; background: rgba(20,50,110,1);">
-    <div class="row">
-      <h1 style="padding-top: 40px;">Falcon 50</h1>
+    <div class="row title">
+      <h1>Falcon 50</h1>
     </div>
-    <div class="row" style="padding: 5%">
-      <div style="position: relative;">
-        <video width="100%" height="100%" playsinline autoplay muted loop>
-          <source src="src/first.mp4" type="video/mp4">
-        </video>
-        <div style="position: absolute;top:0px;left:5%;text-align: left;">
-          <h2>Falcon 50</h2>
-          <p>Nine Seat Supermid Jet</p>
-          <p>Coast to Coast Range</p>
-          <p>Finished Product Cost: $1.35M - $ 2.5M</p>
-          <p>Nationwide One-Way Charter Program</p>
-        </div>
-        <div style="position: absolute;top:0px; right :0%; width: 30%; margin-top: 5%;">
-          <img style="width: 20%;" src="src/img/download.png" alt="wifi"/><br/>
-          <img style="width: 20%;" src="src/img/cert.png" alt="wifi"/>
-        </div>
-        <div style="position: absolute;bottom: 10%; left: 50%; transform: translateX(-50%); width: 50%;">
-          <img style="width: 100%;" src="src/img/F-c.png" alt="wifi"/><br/>
-        </div>
+    <div class="row main">
+      <video width="100%" height="100%" playsinline autoplay muted loop>
+        <source src="src/first.mp4" type="video/mp4">
+      </video>
+      <div class="description" style="position: absolute;top:0px;left:5%;text-align: left;">
+        <h2>Falcon 50</h2>
+        <p>Nine Seat Supermid Jet</p>
+        <p>Coast to Coast Range</p>
+        <p>Finished Product Cost: $1.35M - $ 2.5M</p>
+        <p>Nationwide One-Way Charter Program</p>
+      </div>
+      <div style="position: absolute;top:0px; right :0%; width: 30%; margin-top: 5%;">
+        <img style="width: 20%;" src="src/img/download.png" alt="wifi" />
+        <br/>
+        <img style="width: 20%;" src="src/img/cert.png" alt="wifi" />
+      </div>
+      <div style="position: absolute;bottom: 10%; left: 50%; transform: translateX(-50%); width: 50%;">
+        <img style="width: 100%;" src="src/img/F-c.png" alt="wifi" />
+        <br/>
       </div>
     </div>
   </div>
   <div class="oneslide" style="width: 100%; background: rgba(200,200,200,1);">
-    <div class="row">
-      <h1 style="padding-top: 40px;">Hawker 800</h1>
+    <div class="row title">
+      <h1>Hawker 800</h1>
     </div>
-    <div class="row" style="padding: 5%">
-      <div style="position: relative;">
-        <video width="100%" height="100%" playsinline autoplay muted loop>
-          <source src="src/second.mp4" type="video/mp4">
-        </video>
-        <div style="position: absolute;top:0px;left:5%;text-align: left;">
-          <h2>Hawker 800</h2>
-          <p>Eight Seat Midsize Jet</p>
-          <p>4:30 Range</p>
-          <p>Finished Product Cost: $1.0M - $1.65M</p>
-          <p>Nationwide One-Way Charter Program</p>
-        </div>
-        <div style="position: absolute;top:0px; right :0%; width: 30%; margin-top: 5%;">
-          <img style="width: 20%;" src="src/img/download.png" alt="wifi"/><br/>
-          <img style="width: 20%;" src="src/img/cert.png" alt="wifi"/>
-        </div>
-        <div style="position: absolute;bottom: 10%; left: 50%; transform: translateX(-50%); width: 50%;">
-          <img style="width: 100%;" src="src/img/H-c.png" alt="wifi"/><br/>
-        </div>
+    <div class="row main">
+      <video width="100%" height="100%" playsinline autoplay muted loop>
+        <source src="src/second.mp4" type="video/mp4">
+      </video>
+      <div class="description" style="position: absolute;top:0px;left:5%;text-align: left;">
+        <h2>Hawker 800</h2>
+        <p>Eight Seat Midsize Jet</p>
+        <p>4:30 Range</p>
+        <p>Finished Product Cost: $1.0M - $1.65M</p>
+        <p>Nationwide One-Way Charter Program</p>
+      </div>
+      <div style="position: absolute;top:0px; right :0%; width: 30%; margin-top: 5%;">
+        <img style="width: 20%;" src="src/img/download.png" alt="wifi" />
+        <br/>
+        <img style="width: 20%;" src="src/img/cert.png" alt="wifi" />
+      </div>
+      <div style="position: absolute;bottom: 10%; left: 50%; transform: translateX(-50%); width: 50%;">
+        <img style="width: 100%;" src="src/img/H-c.png" alt="wifi" />
+        <br/>
       </div>
     </div>
   </div>
   <div class="oneslide" style="width: 100%; background: rgba(88,88,200,1);">
-    <div class="row">
-      <h1 style="padding-top: 40px;">Gulfstream IV</h1>
+    <div class="row title">
+      <h1>Gulfstream IV</h1>
     </div>
-    <div class="row" style="padding: 5%">
-      <div style="position: relative;">
-        <video width="100%" height="100%" playsinline autoplay muted loop>
-          <source src="src/third.mp4" type="video/mp4">
-        </video>
-        <div style="position: absolute;top:0px;left:5%;text-align: left;">
-          <h2>Gulfstream IV</h2>
-          <p>14 Seat Heavy Jet</p>
-          <p>Intercontinental Range</p>
-          <p>Finished Product Cost: $3.85M - $ 6.5M</p>
-          <p>Nationwide One-Way Charter Program</p>
-        </div>
-        <div style="position: absolute;top:0px; right :0%; width: 30%; margin-top: 5%;">
-          <img style="width: 20%;" src="src/img/download.png" alt="wifi"/><br/>
-          <img style="width: 20%;" src="src/img/cert.png" alt="wifi"/>
-        </div>
-        <div style="position: absolute;bottom: 10%; left: 50%; transform: translateX(-50%); width: 50%;">
-          <img style="width: 100%;" src="src/img/G-c.png" alt="wifi"/><br/>
-        </div>
+    <div class="row main">
+      <video width="100%" height="100%" playsinline autoplay muted loop>
+        <source src="src/third.mp4" type="video/mp4">
+      </video>
+      <div class="description" style="position: absolute;top:0px;left:5%;text-align: left;">
+        <h2>Gulfstream IV</h2>
+        <p>14 Seat Heavy Jet</p>
+        <p>Intercontinental Range</p>
+        <p>Finished Product Cost: $3.85M - $ 6.5M</p>
+        <p>Nationwide One-Way Charter Program</p>
+      </div>
+      <div style="position: absolute;top:0px; right :0%; width: 30%; margin-top: 5%;">
+        <img style="width: 20%;" src="src/img/download.png" alt="wifi" />
+        <br/>
+        <img style="width: 20%;" src="src/img/cert.png" alt="wifi" />
+      </div>
+      <div style="position: absolute;bottom: 10%; left: 50%; transform: translateX(-50%); width: 50%;">
+        <img style="width: 100%;" src="src/img/G-c.png" alt="wifi" />
+        <br/>
       </div>
     </div>
   </div>
-
   <div class="articles row">
     <div id="polina">
       <h1>Polina</h1>
